--- a/CS598.md
+++ b/CS598.md
@@ -2,6 +2,7 @@
 
 <img src="res/CS598_Final_Project_Poster.png?raw=true"/>
 
+[PDF Version](res/CS598_Final_Project_Poster.pdf)
 
 ## Class Description
 Today we see an increasing need for machines that can understand complex real-world signals, such as speech, images, movies, music, biological and mechanical readings, etc. In this course we will cover the fundamentals of machine learning and signal processing as they pertain to this goal, as well as exciting recent developments.
@@ -11,10 +12,10 @@ We will learn how to decompose, analyze, classify, detect and consolidate signal
 
 ## Final Project: uDoppler-Classification ([Github](https://github.com/edwin-pan/uDoppler-Classification))
 
-# uDoppler-Classification
+## uDoppler-Classification
 Classification of Human Movement using mmWave FMCW Radar Micro-Doppler Signature
 
-## Problem Statement
+### Problem Statement
 The sensor suites needed for autonomous machines to function include varying assortments of sensing modalities. These modalities include LiDAR, RADAR, Cameras, Ultra-sonic, etc. Traditionally, LiDAR and Cameras have provided valuable imaging capabilities. However, there are inherent issues with these sensors that make them unideal of some use-cases, and useless in other use-cases. Namely,
 
 1. Camera based classification doesn't work well when FOV is dimly lit
@@ -28,7 +29,7 @@ Should a solution like this exist, it would need to do a few things.
 2. Separate objects that are close in the sensor's FOV
 3. Track objects as their move in the sensor's FOV
 
-## Our Solution
+### Our Solution
 Millimeter wave (mmwave) radar hardware has been following a few trends.
 
 1. Form factor is decreasing
@@ -39,18 +40,15 @@ Using the latest Texas Instrument mmwave radar system, can we classify targets b
 
 For our project, we will be using the Texas Instrument 1843 mmwave multiple-input-multiple-output (MIMO) mmwave radar system. As a MIMO system, we will achieve source separation using the angle of arrival (AOA), and range as differentiating factors. Tracking of targets in the radar FOV will be done with an Extended Kalman Filter (EKF). Classification will then be done on the separated target microdoppler signatures. For this experiment, we will attempt to classify targets as pedestrians or bicycles. 
 
-## Design
+### Design
 
-### Source Separation
+#### Source Separation
 
-### Tracking
+#### Tracking
 
-### Classification
+#### Classification
 For this experiment, we attempt to classify microdoppler signature spectrograms as either orginating from a pedestrian or a bicycle. With each 2 second long scan, we generate on spectrogram. This spectrogram is treated like an image.
 
 Classification is done using the following two techniques:
 1. Gaussian Mixture Model (GMM)
 2. Convolutional Neural Net (CNN)
-
-
-[PDF Version](res/CS598_Final_Project_Poster.pdf)
